<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/account"
        android:id="@+id/account_menu"
        android:icon="@drawable/ic_baseline_account_circle_24"
        app:showAsAction="always"
        android:orderInCategory="3"
        />

    <item
        android:title="@string/message"
        android:id="@+id/message_menu"
        android:icon="@drawable/ic_baseline_message_24"
        app:showAsAction="always"
        android:orderInCategory="2"
        />

    <item
        android:title="@string/notification"
        android:id="@+id/notification_menu"
        android:icon="@drawable/ic_baseline_notifications_24"
        app:showAsAction="always"
        android:orderInCategory="1"
        />



</menu>