<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".from_reg">



    <EditText
        android:id="@+id/emailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:hint ="@string/email_hint"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:textColorHint = "@color/hint"
        android:textColor="@color/main"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:hint ="@string/pas_hint"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:textColor="@color/main"
        android:textColorHint = "@color/hint"
        app:layout_constraintBottom_toTopOf="@id/passwordRegRepeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailReg"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/passwordRegRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/main"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:hint ="@string/rep_pas_hint"
        android:textColorHint = "@color/hint"
        app:layout_constraintBottom_toTopOf="@id/reg_new_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordReg"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/reg_new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_button"
        android:onClick="onReg"
        app:backgroundTint="@null"
        android:background="@drawable/button_style"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegRepeat"
        />




</androidx.constraintlayout.widget.ConstraintLayout>