<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signIn">

    <EditText
        android:id="@+id/emailSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:padding="10dp"
        android:background="@drawable/edit_text_style"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:hint = "@string/email_hint"
        android:textColorHint = "@color/hint"
        android:textColor="@color/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/passwordSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:hint = "@string/pas_hint"
        android:textColor="@color/main"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_style"
        android:textColorHint = "@color/hint"
        app:layout_constraintBottom_toTopOf="@id/signIn_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailSignIn"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/signIn_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:paddingStart="30dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_style"
        android:paddingEnd="30dp"
        android:text="@string/signIn_button"
        android:onClick="onSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordSignIn" />


</androidx.constraintlayout.widget.ConstraintLayout>