<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.fragment.change_f">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id = "@+id/scroll_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id = "@+id/change_password_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <ImageView
        android:id="@+id/change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_change_password"
        android:background="@color/main"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/editOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:layout_marginTop="150dp"
        android:hint="@string/pas_hint"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/change_image" />


    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editOldPassword" />

    <EditText
        android:id="@+id/editRepNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/edit_text_style"
        android:padding="10dp"
        android:textColor="@color/main"
        android:textColorHint="@color/hint"
        android:layout_marginTop="50dp"
        android:hint="@string/rep_new_password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editNewPassword" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        android:onClick="onChangePassword"
        app:backgroundTint="@null"
        android:background="@drawable/button_style"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editRepNewPassword"
        />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>